# RustSearch

./: .gitignore  Cargo.toml  README.md  build.rs
src/: app.rs  indexer.rs  main.rs  searcher.rs  windows_usn.rs
wix/: License.rtf  main.wxs
