[package]
name = "rust_search"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2024"

[package.metadata.wix]
eula = false

[dependencies]
eframe = { version = "0.29", features = ["persistence"] }
egui_extras = "0.29"
walkdir = "2.5"
chrono = "0.4"
opener = "0.7"
winapi = { version = "0.3", features = ["shellapi", "winuser"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
image = { version = "0.25", features = ["jpeg", "png", "ico"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2
